# advent-of-code

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
2017/1/: day1.go  day1_test.go
2017/2/: day2.go  day2_test.go
2017/3/: day3.go  day3_test.go
2017/4/: day4.go  day4_test.go
2017/5/: day5.go  day5_test.go
2017/utils/: go.mod  utils.go
2019/1/: day1.go
2019/10/: day10.go
2019/11/: day11.go
2019/12/: day12.go
2019/13/: day13.go
2019/14/: day14.go
2019/15/: day15.go
2019/16/: day16.go
2019/17/: day17.go
2019/18/: day18.go
2019/19/: day19.go
2019/2/: day2.go
2019/21/: day21.go
2019/22/: day22.go
2019/23/: day23.go
2019/24/: day24.go
2019/25/: day25.go
2019/3/: day3.go
2019/4/: day4.go
2019/5/: day5.go
2019/6/: day6.go
2019/7/: day7.go
2019/8/: day8.go
2019/9/: day9.go
2019/intcode-cpu/: intcode-cpu.go
2019/utils/: utils.go
2020/: .gitignore
2021/: .gitignore  driver.py
2021/day_01/: solution.py
2021/day_02/: solution.py
2021/day_03/: solution.py
2021/day_04/: solution.py
2021/day_05/: solution.py
2021/day_06/: solution.py
2021/day_07/: solution.py
2021/day_08/: reference.txt  solution.py
2021/day_09/: solution.py
2021/day_10/: solution.py
2022/: package-lock.json  package.json  tsconfig.json
2022/advent-of-code-2022/: Cargo.toml
2022/advent-of-code-2022/inputs/: 03.in  07.test.results  10.test.results  15.in  16.test.results
2022/advent-of-code-2022/src/: lib.rs  main.rs  utils.rs
2022/advent-of-code-2022/src/solutions/: day1.rs
utils/: index.ts
(+98 files in other folders)
