[package]
name = "aoc"
version = "0.1.0"
authors = ["jdwile"]
edition = "2021"
default-run = "aoc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
itertools = "0.10.5"
sets = "1.2.0"
scan_fmt = "0.2.6"

# lib proc-macro dependencies
syn = { version = "1.0", features = ["full"] }
quote = "1.0"